docs/archive/versions/v10.0.0/introduction/additional-resources.rst
.. _additional-resources:

Additional Resources
====================

The following resources are useful for learning Exponent and some of the projects that it depends on.

Exponent Articles
"""""""""""""""""

* `The Exponent Log <https://blog.getexponent.com/>`_ - our official blog
* `Building li.st for Android with Exponent and React Native <https://www.youtube.com/watch?v=cI9bDvDEsYE>`_ - conference talk
* `Build Cross Platform React Native Apps with Exponent and Redux <https://www.pluralsight.com/courses/build-react-native-exponent-redux-apps>`_ (video course on PluralSight)

Example Projects built with Exponent
""""""""""""""""""""""""""""""""""""

* `Growler Prowler <https://getexponent.com/@community/growler-prowler>`_ (`source <https://github.com/brentvatne/growler-prowler>`_) - a useful demo project showing how to use maps, navigation, Facebook auth, and more
* `Floatyplane <https://getexponent.com/@exponent/floatyplane>`_ (`source <https://github.com/exponent/floatyplane>`_) - a game you might be familiar with
* `Foodwheel <https://getexponent.com/@exponent/foodwheel>`_ (`source <https://github.com/exponent/foodwheel>`_) - how we decide where to eat lunch
* `React Native Playground <http://rnplay.org>`_ (`source <https://github.com/exponent/rnplay>`_) - client app for RNPlay
* `Instagram Stories Clone <https://getexponent.com/@mastermo/instagram-stories>`_ (`source <https://github.com/mastermoo/rn-instagram-stories>`_)
* `Pomodoro <https://getexponent.com/@exponent/pomodoro>`_ (`source <https://github.com/exponent/pomodoroexp>`_) - sample Pomodoro app

React Native
""""""""""""""

* `React Native Express <http://www.reactnativeexpress.com/>`_ - a walkthrough the building blocks of React and React Native.
* `Official React Native Documentation <https://facebook.github.io/react-native/docs/sample-application-movies.html>`_
* `React Native Fundamentals <https://egghead.io/courses/react-native-fundamentals>`_ (video course on Egghead.io)
* `Learning React Native <http://shop.oreilly.com/product/0636920041511.do>`_ (book)

React
"""""""""""""""
* `React lessons on Egghead.io <https://egghead.io/technologies/react>`_ - several playlists that cover React and Redux fundamentals.
* `Official React Documentation <https://facebook.github.io/react/docs/getting-started.html>`_

JavaScript
"""""""""""""""""
* `ES6 Katas <http://es6katas.org/>`_ - exercises to familiarize yourself with new JavaScript features used in React Native
